--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "instantsearch.js": "^2.0.2",
     "vue": "^2.3.3",
     "vue-chartjs": "^2.8.2",
-    "vue-router": "^2.3.1"
+    "vue-multiselect": "^2.0.2",
+    "vue-router": "^2.3.1",
+    "vue2-dragula": "^2.4.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
