--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
   "dependencies": {
     "axios": "^0.16.2",
     "chart.js": "^2.6.0",
+    "firebase": "^4.3.0",
     "instantsearch.js": "^2.0.2",
+    "lodash": "^4.17.4",
     "vue": "^2.3.3",
     "vue-chartjs": "^2.8.2",
     "vue-multiselect": "^2.0.2",
+    "vue-nav-tabs": "^0.5.1",
     "vue-router": "^2.3.1",
     "vue2-dragula": "^2.4.4"
   },
