--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "chart.js": "^2.6.0",
+    "coffeekraken-gridle": "^3.0.0-rc.1",
     "firebase": "^4.3.0",
     "instantsearch.js": "^2.0.2",
     "lodash": "^4.17.4",
