--- a/package.json
+++ b/package.json
@@ -14,14 +14,21 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "async": "^2.6.0",
     "axios": "^0.16.2",
+    "blob-util": "1.3.0",
     "chart.js": "^2.6.0",
     "coffeekraken-gridle": "^3.0.0-rc.1",
     "firebase": "^4.3.0",
+    "gtin-generator": "^1.0.4",
     "instantsearch.js": "^2.0.2",
     "lodash": "^4.17.4",
+    "moment": "^2.20.1",
+    "tachyons": "^4.9.1",
     "vue": "^2.3.3",
     "vue-chartjs": "^2.8.2",
+    "vue-core-image-upload": "2.3.9",
+    "vue-croppa": "1.0.2",
     "vue-multiselect": "^2.0.2",
     "vue-nav-tabs": "^0.5.1",
     "vue-router": "^2.3.1",
